--- a/qrpay/index.html
+++ b/qrpay/index.html
@@ -10,8 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>姬长信收款码五合一在线生成,40个模板供您选择</title>
-    <meta name="description" content="姬长信收款码五合一，打造最简便收款服务，40个模板供您选择,支持PayPal、微信支付、支付宝支付、QQ支付、京东支付,百度钱包五合一收款，将支付宝二维码,微信二维码,QQ二维码,京东二维码,百度支付合并为一个二维码，无需手续费" />
+    <title>五合一在线生成,40个模板供您选择</title>
+    <meta name="description" content="收款码五合一，打造最简便收款服务，40个模板供您选择,支持PayPal、微信支付、支付宝支付、QQ支付、京东支付,百度钱包五合一收款，将支付宝二维码,微信二维码,QQ二维码,京东二维码,百度支付合并为一个二维码，无需手续费" />
     <meta name="keywords" content="姬长信,API,收款码,付款码,收款码合成,收款码三合一,四合一收款码,五合一收款码,六合一收款码,收款码美化,支付宝收款码,微信支付宝二维码合并,微信支付宝二维码合一,微信支付宝收款二维码,微信支付宝二维码整合,一码付,微信支付宝二维码,京东二维码,百度支付二维码,聚合支付" />
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -32,7 +32,7 @@
 <div class="header">
     <div class="am-g">
         <h1 style="text-shadow: slategray 3px 3px 3px;">五合一收款码</h1>
-        <p>姬长信收款码在线生成<br>40个模板供您选择,打造最简洁收款服务</p>
+        <p>收款码在线生成<br>40个模板供您选择,打造最简洁收款服务</p>
 	<p>微信同款"<font color="#FF6633">五合一收款码</font>"小程序已经上线欢迎点赞收藏支持我们</p>
     </div>
     <hr>
