--- a/qrpay/index.html
+++ b/qrpay/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>五合一在线生成,40个模板供您选择</title>
     <meta name="description" content="收款码五合一，打造最简便收款服务，40个模板供您选择,支持PayPal、微信支付、支付宝支付、QQ支付、京东支付,百度钱包五合一收款，将支付宝二维码,微信二维码,QQ二维码,京东二维码,百度支付合并为一个二维码，无需手续费" />
-    <meta name="keywords" content="姬长信,API,收款码,付款码,收款码合成,收款码三合一,四合一收款码,五合一收款码,六合一收款码,收款码美化,支付宝收款码,微信支付宝二维码合并,微信支付宝二维码合一,微信支付宝收款二维码,微信支付宝二维码整合,一码付,微信支付宝二维码,京东二维码,百度支付二维码,聚合支付" />
+    <meta name="keywords" content="API,收款码,付款码,收款码合成,收款码三合一,四合一收款码,五合一收款码,六合一收款码,收款码美化,支付宝收款码,微信支付宝二维码合并,微信支付宝二维码合一,微信支付宝收款二维码,微信支付宝二维码整合,一码付,微信支付宝二维码,京东二维码,百度支付二维码,聚合支付" />
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
     <!-- No Baidu Siteapp-->
@@ -323,12 +323,6 @@
                                   <div class="am-thumbnail">
                         <label class="text-muted">
                             <img src="https://ae01.alicdn.com/kf/HTB1axX9eoGF3KVjSZFmq6zqPXXaL.jpg" id="tpl_38"/><div class="am-thumbnail-caption"><input type="radio" name="tpl_id" value="38"> 猪猪爱心</div>
-                        </label>
-                        </div>
-                    </li><li>
-                              <div class="am-thumbnail">
-                        <label class="text-muted">
-                            <img src="https://api.isoyu.com/beibei_images.php" id="tpl_31"/><div class="am-thumbnail-caption"><input type="radio" name="tpl_id" value="31"> 站长今日自拍</div>
                         </label>
                         </div>
                     </li>
