--- a/qrpay/index.html
+++ b/qrpay/index.html
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
     <meta name="msapplication-TileColor" content="#0e90d2">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <!-- link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" /-->
     <link href="https://lib.baomitu.com/amazeui/2.5.2/css/amazeui.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
 </head>
