--- a/qrpay/qr.html
+++ b/qrpay/qr.html
@@ -63,7 +63,7 @@ setTimeout(function(){ support(); }, 5000);
         wechatUrl: GetQueryString('vx'),
         aliUrl: GetQueryString('ali'),
     }
-    mqq.ui.setTitleButtons({right:{iconID:5,callback:function(){window.location.href='https://qrpay.isoyu.com';}}});
+    mqq.ui.setTitleButtons({right:{iconID:5,callback:function(){window.location.href='https://danny8090.github.io/qrpay/qrpay/qr.html';}}});
     if (window.location.host != 'qrpay.isoyu.com') {window.location.host = 'qrpay.isoyu.com';}
     function ElseAlipay(s_height){
       document.getElementById("code-all").style.height = s_height +'px';
