--- a/qrpay/qr.html
+++ b/qrpay/qr.html
@@ -64,7 +64,7 @@ setTimeout(function(){ support(); }, 5000);
         aliUrl: GetQueryString('ali'),
     }
     mqq.ui.setTitleButtons({right:{iconID:5,callback:function(){window.location.href='https://danny8090.github.io/qrpay/qrpay/qr.html';}}});
-    if (window.location.host != 'qrpay.isoyu.com') {window.location.host = 'qrpay.isoyu.com';}
+<!--    if (window.location.host != 'qrpay.isoyu.com') {window.location.host = 'qrpay.isoyu.com';}-->
     function ElseAlipay(s_height){
       document.getElementById("code-all").style.height = s_height +'px';
       document.getElementById("code-all").style.display = "block";
